Fix flickering of Our Partners slides

--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -47,7 +47,9 @@
 
         .SlideTitle {
           position: absolute;
-          bottom: -2rem;
+          padding-top: 1rem;
+          margin-bottom: -2rem;
+          bottom: 0;
           left: -1rem;
           right: -1rem;
           text-align: center;
